--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="../dist/style.css">
     <title>Document</title>
 </head>
-<body class="bg-third">
+<body class="bg-white">
     <div class="cont w-screen">
         <!-- CABEÇALHO DA PAGINA -->
-        <header class="bg-third w-full flex justify-between px-4 pt-3 items-center">
+        <header class=" w-full flex justify-between px-4 pt-3 items-center">
             <div class="logo">
                 <h1 class="text-xl font-body text-center text-four ">Mia Landhi.</h1>
             </div>
