--- a/src/index.html
+++ b/src/index.html
@@ -6,60 +6,59 @@
     <link rel="stylesheet" href="../dist/style.css">
     <title>Document</title>
 </head>
-<body class="bg-white">
-    <div class="cont w-screen">
+<body class="bg-back font-body">
+    <div class="cont w-screen relative">
         <!-- CABEÇALHO DA PAGINA -->
-        <header class=" w-full flex justify-between px-4 pt-3 items-center">
+        <header class=" w-full flex justify-between px-4 h-10 items-center fixed bg-white bottom-0 z-10 shadow-lg ">
             <div class="logo">
-                <h1 class="text-xl font-body text-center text-four ">Mia Landhi.</h1>
+                <h1 class="text-sm font-semibold font-body text-center ">Mia Landhi.</h1>
             </div>
-            <nav class="nav-mobile hidden">
-                <a href="">conheça Mia</a>
-                <a href="">meus trabalhos</a>
-                <a href="">contato</a>
-            </nav>
-            <nav class="nav-mobile-desktop hidden">
-                <a href="">conheça Mia</a>
-                <a href="">meus trabalhos</a>
-                <a href="">contato</a>
-            </nav>
             <nav>
-                <img src="../images/menu.png" alt="">
+                <img src="../images/icons/categoria.png" alt="menu" class="w-5">
             </nav>
         </header>
 
         <!-- HERO SECTION DA PAGINA! -->
         <section class="h-full flex w-full justify-center flex-col items-center pt-20 ">
-            <div class="image-div w-full scale-75 overflow-hidden" >
-                <img src="../images/perfil2.png" alt="" class="rounded-full w-full bg-primary">
+            <div class=" w-full flex">
+                <!-- SECTION IMAGE -->
+                <div class="links flex flex-col justify-center pl-5 gap-6 scale-75">
+                    <img src="../images/icons/instagram.png" alt="" class="">
+                    <img src="../images/icons/linkedin.png" alt="">
+                    <img src="../images/icons/whatsapp.png" alt="">
+                </div>
+                <div class=" w-full flex justify-center">
+                    <div class="image w-52 bg-primary rounded-tr-full rounded-br-full rounded-tl-full overflow-hidden mb-16 mr-10">
+                        <img src="../images/perfil2.png" class="w-full" alt="">
+                    </div>
+                </div>
             </div>
-            <div class="text text-center w-full px-4">
-                <h1 class="text-3xl font-medium text-secondary"> Olá, me chamo Mia!</h1>
-                <p class="text-xl font-light">fazendo o melhor para trazer os momentos através das fotos</p>
+
+            <!-- SECTION TEXTO-->
+            <div class="text text-left w-full px-5 font-body">
+                <h1 class="text-3xl font-semibold mb-2">Hello, Everyone! I'm</h1>
+                <h1 class="text-3xl mb-1 font-semibold">Mia Landhi</h1>
+                <H2 class="text-lg text-secondary mb-2 font-medium">Professional photograph</H2>
+                <p class="text-sm text-secondary">doing our best to bring the moments through photos</p>
             </div>
-            <div class="links flex gap-5 mt-7">
-                <img src="../images/icons/instagram.png" alt="" class="">
-                <img src="../images/icons/linkedin.png" alt="">
-                <img src="../images/icons/whatsapp.png" alt="">
-            </div>
-            <div class="arrow-div w-20 pt-20 mb-20 hover:cursor-pointer">
+            <div class="arrow-div pt-10 mb-36 hover:cursor-pointer flex justify-left  w-full px-4">
                 <a href="#eu">
-                    <img src="../images/icons/arrow.gif" alt="" class="rotate-90 w-full">
+                    <img src="../images/icons/arrow.gif" alt="" class="rotate-90 w-10">
                 </a>
             </div>
         </section>
 
         <!-- SEÇÃO 1 - SOBRE MEU TRABALHO -->
         <section class="text-center scroll-mt-10" id="eu">
-            <h1 class="text-2xl">O que você pode esperar de mim?</h1>
+            <h1 class="text-xl font-medium">what can you expect from me</h1>
             <!-- BLOCO 1 -->
             <div class="bloco-1 w-full h-full">
                 <div class="bloco-1-img scale-75 hover:scale-90 transition-all 1s">
                     <img src="../images/section/mobile/img01.jpg" alt="" class="rounded-md">
                 </div>
                 <div class="bloco-1-text text-center px-5 flex flex-col gap-10">
-                    <h2 class="text-2xl text-green-950">1º Fotos com design moderno e criativas</h2>
-                    <p class="font-light text-xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam exercitationem numquam sit ipsum mollitia reprehenderit delectus maxime, reiciendis totam nesciunt similique ut dolore, accusamus doloribus. Sed optio exercitationem modi non.</p>
+                    <h2 class="text-2xl text-secondary font-medium">1º Photos with modern and creative design</h2>
+                    <p class="text-sm">In the age of visual innovation, modern photos transcend registers, becoming bold artistic expressions. Vibrant colors, innovative compositions and the use of technology redefine photography, transforming it into visual narratives that tell stories and evoke emotions. A universal language, contemporary photography is a unique visual experience.</p>
                 </div>
             </div>
 
@@ -69,8 +68,8 @@
                     <img src="../images/section/mobile/img2.jpg" alt="" class="rounded-md">
                 </div>
                 <div class="bloco-1-text text-center px-5 flex flex-col gap-10">
-                    <h2 class="text-2xl text-green-950">2º Fotos editadas e revisadas</h2>
-                    <p class="font-light text-xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam exercitationem numquam sit ipsum mollitia reprehenderit delectus maxime, reiciendis totam nesciunt similique ut dolore, accusamus doloribus. Sed optio exercitationem modi non.</p>
+                    <h2 class="text-2xl text-secondary font-medium">2º the way you want</h2>
+                    <p class="text-sm">In any business, delivering the product as the customer wants is not just an obligation, it is the secret to building trust. This not only keeps customers happy but also builds a good reputation. It's the recipe for a business that grows and stands out.</p>
                 </div>
             </div>
             
@@ -80,8 +79,8 @@
                     <img src="../images/section/mobile/img3.jpg" alt="" class="rounded-md">
                 </div>
                 <div class="bloco-1-text text-center px-5 flex flex-col gap-10">
-                    <h2 class="text-2xl text-green-950">1º qualidade e garantia de satisfação do cliente</h2>
-                    <p class="font-light text-xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam exercitationem numquam sit ipsum mollitia reprehenderit delectus maxime, reiciendis totam nesciunt similique ut dolore, accusamus doloribus. Sed optio exercitationem modi non.</p>
+                    <h2 class="text-2xl text-green-950">3º unparalleled quality</h2>
+                    <p class="text-sm">In a world full of photos, quality is the trump card. Vibrant colors, sharp details - it's not just an image, it's a vibe! Amazing photos not only tell stories, they make them jump off the screen. Investing in this footprint is investing in moments that last, like, forever.</p>
                 </div>
             </div>
         </section>
