resolvendo problema do espaço no icone de tema

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
             <nav class="flex gap-3">
                 <img src="../images/icons/sun.png" alt="" class="w-0 dark:w-5" id="sun">
                 <img src="../images/icons/moon.png" alt="" class="w-6 dark:hidden dar" id="moon">
-                <img src="../images/icons/categoria.png" alt="menu" class="w-5 dark:hidden">
-                <img src="../images/icons/categoria(1).png" alt="" class="w-0 dark:visible dark:w-5">
+                <img src="../images/icons/categoria.png" alt="menu" class="w-5 dark:hidden" id="category">
+                <img src="../images/icons/categoria(1).png" alt="menu" class="w-5 hidden dark:block" id="category">
             </nav>
         </header>
 
