--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
             <div class="text text-left w-full px-5 font-body">
                 <h1 class="text-3xl font-semibold mb-2 dark:text-gray-300">Hello, Everyone! I'm</h1>
                 <h1 class="text-3xl mb-1 font-semibold dark:text-gray-300">Mia Landhi</h1>
-                <H2 class="text-lg text-secondary mb-2 font-medium dark:text-primary">Professional photograph</H2>
+                <H2 class="text-lg text-primary mb-2 font-medium dark:text-primary">Professional photograph</H2>
                 <p class="text-sm text-secondary dark:text-primary">doing our best to bring the moments through photos</p>
             </div>
             <div class="arrow-div pt-10 mb-36 hover:cursor-pointer flex justify-left  w-full px-4">
