adicionando botão de voltar ao topo

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,14 @@
 </head>
 <body class="bg-back font-body dark:bg-third">
     <div class="cont w-screen relative">
+
+        <!-- BACK TO TOP BUTTON -->
+        <div class="bg-primary w-8 p-2 opacity-50 rounded-xl fixed bottom-14 right-5 transition-all z-20 invisible" id="backtotop">
+            <a href="#inicio">
+                <img src="../images/icons/up-arrow(1).png" alt="" class="w-6 bg-primary">
+            </a>
+        </div>
+
         <!-- CABEÇALHO DA PAGINA -->
         <header class=" w-full flex justify-between px-4 h-14 items-center fixed bg-white bottom-0 z-10 shadow-lg dark:bg-third">
             <div class="logo">
@@ -22,7 +30,7 @@
         </header>
 
         <!-- HERO SECTION DA PAGINA! -->
-        <section class="h-full flex w-full justify-center flex-col items-center pt-20 ">
+        <section class="h-full flex w-full justify-center flex-col items-center pt-20 " id="inicio">
             <div class=" w-full flex">
                 <!-- SECTION IMAGE -->
                 <div class="links flex flex-col justify-center pl-5 gap-6 scale-75">
