Finalizando Seção de Portifolio

--- a/src/index.html
+++ b/src/index.html
@@ -111,28 +111,33 @@
                 <swiper-slide class="flex flex-col items-center gap-5">
                     <!-- div image -->
                     <div class="w-72 h-40 relative bg-blue-400 overflow-hidden rounded-lg shadow-lg">
-                        <img src="../images/section/img2-desktop.jpg" alt="" class="bg-contain w-full">
+                        <img src="../images/section/onepiece.jpeg" alt="" class="bg-contain w-full">
                     </div>
                     <!-- div text -->
                     <div class="mb-36 text-left px-10">
-                        <h2 class="text-xl dark:text-gray-300 font-semibold mb-2">Algum texto</h2>
-                        <p class="dark:text-primary">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui, consequatur voluptatem</p>
+                        <h2 class="text-xl dark:text-gray-300 font-semibold mb-2">TV Show One Piece</h2>
+                        <p class="dark:text-primary">
+                            I participated in the creative photography process for the Netflix series One Piece
+                        </p>
 
                         <!-- button -->
                         <button class=" bg-primary px-5 py-4 rounded-lg mt-4 text-white flex gap-2">
-                            <p class="">Leia mais</p>
+                            <p class="">Read More</p>
                             <img src="../images/icons/seta-direita(1).png" alt="" class="scale-75 hover:translate-x-1 transition-all">
                         </button>
                     </div>
                 </swiper-slide>
                 <swiper-slide class="flex flex-col items-center gap-5">
                     <div class="w-72 h-40 relative bg-blue-400 overflow-hidden rounded-lg shadow-lg">
-                        <img src="../images/section/img2-desktop.jpg" alt="" class="bg-contain w-full">
+                        <img src="../images/section/theboys.jpg" alt="" class="bg-contain w-full">
                     </div>
                     <div class="mb-36 text-left px-10">
-                        <h2 class="text-xl dark:text-gray-300 font-semibold mb-2">Algum texto</h2>
-                        <p class="dark:text-primary">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui, consequatur voluptatem</p>
-                        <button class=" bg-primary px-4 py-2 rounded-lg mt-4 text-white">lei mais</button>
+                        <h2 class="text-xl dark:text-gray-300 font-semibold mb-2">The Boys - TV Series</h2>
+                        <p class="dark:text-primary">I worked on the photography team for the series The Boys</p>
+                        <button class="bg-primary px-5 py-4 rounded-lg mt-4 text-white flex gap-2">
+                            <p class="">Read More</p>
+                            <img src="../images/icons/seta-direita(1).png" alt="" class="scale-75 hover:translate-x-1 transition-all">
+                        </button>
                     </div>
                 </swiper-slide>
             </swiper-container>
@@ -150,6 +155,6 @@
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
-    <script src="./darkmode.js" type="module"></script>
+    <script src="./script.js" type="module"></script>
 </body>
 </html>
