--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../dist/style.css">
-    <link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-/>
     <title>Mia Landhi Photograph</title>
 
 </head>
@@ -107,7 +103,7 @@
             </div>
 
             <!-- SLIDER CONTAINER -->
-            <swiper-container class="mySwiper w-full h-full scale-90" navigation="true">
+            <swiper-container class="mySwiper w-full h-full scale-90 cursor-grab" navigation="true">
                 <swiper-slide class="flex flex-col items-center gap-5">
                     <!-- div image -->
                     <div class="w-72 h-40 relative bg-blue-400 overflow-hidden rounded-lg shadow-lg">
