tirando os outline

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <!-- BACK TO TOP BUTTON -->
         <div class="bg-primary w-8 p-2 opacity-50 rounded-xl fixed bottom-14 right-5 transition-all z-20 invisible hover:bg-secondary" id="backtotop">
             <a href="#inicio">
-                <img src="../images/icons/up-arrow(1).png" alt="" class="w-6">
+                <img src="../images/icons/up-arrow(1).png" alt="" class="w-6 outline-none">
             </a>
         </div>
 
@@ -55,7 +55,7 @@
             </div>
             <div class="arrow-div pt-10 mb-36 hover:cursor-pointer flex justify-left  w-full px-4">
                 <a href="#eu">
-                    <img src="../images/icons/arrow.gif" alt="" class="rotate-90 w-10">
+                    <img src="../images/icons/arrow.gif" alt="" class="rotate-90 w-10 outline-none">
                 </a>
             </div>
         </section>
@@ -117,7 +117,7 @@
                         </p>
 
                         <!-- button -->
-                        <button class=" bg-primary px-5 py-4 rounded-lg mt-4 text-white flex gap-2">
+                        <button class=" bg-primary px-5 py-4 rounded-lg mt-4 text-white flex gap-2 hover:bg-secondary transition-colors cursor-pointer outline-none">
                             <p class="">Read More</p>
                             <img src="../images/icons/seta-direita(1).png" alt="" class="scale-75 hover:translate-x-1 transition-all">
                         </button>
@@ -130,9 +130,9 @@
                     <div class="mb-36 text-left px-10">
                         <h2 class="text-xl dark:text-gray-300 font-semibold mb-2">The Boys - TV Series</h2>
                         <p class="dark:text-primary">I worked on the photography team for the series The Boys</p>
-                        <button class="bg-primary px-5 py-4 rounded-lg mt-4 text-white flex gap-2">
+                        <button class="bg-primary px-5 py-4 rounded-lg mt-4 text-white flex gap-2 hover:bg-secondary transition-colors cursor-pointer">
                             <p class="">Read More</p>
-                            <img src="../images/icons/seta-direita(1).png" alt="" class="scale-75 hover:translate-x-1 transition-all">
+                            <img src="../images/icons/seta-direita(1).png" alt="" class="scale-75 hover:translate-x-1 transition-all outline-none">
                         </button>
                     </div>
                 </swiper-slide>
