--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 
         <!-- BACK TO TOP BUTTON -->
         <div class="bg-primary w-8 p-2 opacity-50 rounded-xl fixed bottom-14 right-5 transition-all z-20 invisible hover:bg-secondary" id="backtotop">
-            <a href="#inicio">
+            <a href="#inicio" class="outline-none">
                 <img src="../images/icons/up-arrow(1).png" alt="" class="w-6 outline-none">
             </a>
         </div>
@@ -53,8 +53,8 @@
                 <H2 class="text-lg text-primary mb-2 font-medium dark:text-primary">Professional photograph</H2>
                 <p class="text-sm text-secondary dark:text-primary">doing our best to bring the moments through photos</p>
             </div>
-            <div class="arrow-div pt-10 mb-36 hover:cursor-pointer flex justify-left  w-full px-4">
-                <a href="#eu">
+            <div class="arrow-div pt-10 mb-36 hover:cursor-pointer flex justify-left  w-full px-4 outline-none">
+                <a href="#eu" class="outline-none">
                     <img src="../images/icons/arrow.gif" alt="" class="rotate-90 w-10 outline-none">
                 </a>
             </div>
@@ -118,8 +118,8 @@
 
                         <!-- button -->
                         <button class=" bg-primary px-5 py-4 rounded-lg mt-4 text-white flex gap-2 hover:bg-secondary transition-colors cursor-pointer outline-none">
-                            <p class="">Read More</p>
-                            <img src="../images/icons/seta-direita(1).png" alt="" class="scale-75 hover:translate-x-1 transition-all">
+                            <p class="outline-none">Read More</p>
+                            <img src="../images/icons/seta-direita(1).png" alt="" class="scale-75 hover:translate-x-1 transition-all outline-none">
                         </button>
                     </div>
                 </swiper-slide>
@@ -130,8 +130,8 @@
                     <div class="mb-36 text-left px-10">
                         <h2 class="text-xl dark:text-gray-300 font-semibold mb-2">The Boys - TV Series</h2>
                         <p class="dark:text-primary">I worked on the photography team for the series The Boys</p>
-                        <button class="bg-primary px-5 py-4 rounded-lg mt-4 text-white flex gap-2 hover:bg-secondary transition-colors cursor-pointer">
-                            <p class="">Read More</p>
+                        <button class="bg-primary px-5 py-4 rounded-lg mt-4 text-white flex gap-2 hover:bg-secondary transition-colors cursor-pointer outline-none">
+                            <p class="outline-none">Read More</p>
                             <img src="../images/icons/seta-direita(1).png" alt="" class="scale-75 hover:translate-x-1 transition-all outline-none">
                         </button>
                     </div>
