--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
+<html lang="en" class="scroll-smooth select-none">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../dist/style.css">
     <title>Mia Landhi Photograph</title>
-
 </head>
-<body class="bg-back font-body dark:bg-third">
-    <div class="cont w-screen relative">
 
-        <!-- BACK TO TOP BUTTON -->
-        <div class="bg-primary w-8 p-2 opacity-50 rounded-xl fixed bottom-14 right-5 transition-all z-20 invisible hover:bg-secondary" id="backtotop">
-            <a href="#inicio" class="outline-none">
-                <img src="../images/icons/up-arrow(1).png" alt="" class="w-6 outline-none">
-            </a>
-        </div>
 
-        <!-- CABEÇALHO DA PAGINA -->
-        <header class=" w-full flex justify-between px-4 h-14 items-center fixed bg-white bottom-0 z-10 shadow-lg dark:bg-third">
+
+<!-- BODY -->
+<body class="font-body  w-full h-full flex flex-col justify-center items-center lg:flex-col dark:bg-third">
+
+    <!-- CABEÇALHO DA PAGINA -->
+    <header class=" w-full ">
+        <div class=" w-full flex justify-between px-4 h-14 items-center fixed bg-white bottom-0 z-10 shadow-sm dark:bg-third lg:top-0 lg:min-w-full lg:justify-around">
             <div class="logo">
                 <h1 class="text-sm font-semibold font-body text-center dark:text-primary">Mia Landhi.</h1>
             </div>
@@ -28,89 +24,124 @@
                 <img src="../images/icons/categoria.png" alt="menu" class="w-5 dark:hidden" id="category">
                 <img src="../images/icons/categoria(1).png" alt="menu" class="w-5 hidden dark:block" id="category">
             </nav>
-        </header>
+        </div>
+
+    </header>
+    
+    <!-- CONTAINER-->
+    <div class="cont w-screen relative max-w-5xl dark:bg-third">
+        <!-- BACK TO TOP BUTTON -->
+        <div class="bg-primary w-8 p-2 opacity-50 rounded-xl fixed bottom-14 right-5 transition-all z-20 invisible hover:bg-secondary" id="backtotop">
+            <a href="#inicio" class="outline-none">
+                <img src="../images/icons/up-arrow(1).png" alt="" class="w-6 outline-none">
+            </a>
+        </div>
+
 
         <!-- HERO SECTION DA PAGINA! -->
-        <section class="h-full flex w-full justify-center flex-col items-center pt-20 " id="inicio">
-            <div class=" w-full flex">
-                <!-- SECTION IMAGE -->
-                <div class="links flex flex-col justify-center pl-5 gap-6 scale-75">
+        <section class="h-full flex w-full justify-center flex-col items-center pt-20 lg:flex-row-reverse  lg:items-center lg:justify-around lg:pt-40 " id="inicio">
+
+            <!-- DIV IMAGEM + LINKS -->
+            <div class=" w-full flex ">
+                <!-- LINKS IMAGES -->
+                <div class="links flex flex-col justify-center pl-5 gap-6 scale-75 lg:hidden">
                     <img src="../images/icons/instagram.png" alt="" class="">
                     <img src="../images/icons/linkedin.png" alt="">
                     <img src="../images/icons/whatsapp.png" alt="">
                 </div>
+
+                <!-- Imagem de perfil -->
                 <div class=" w-full flex justify-center">
-                    <div class="image w-52 bg-primary rounded-tr-full rounded-br-full rounded-tl-full overflow-hidden mb-16 mr-10">
+                    <div class="image w-52 bg-primary rounded-tr-full rounded-br-full rounded-tl-full overflow-hidden mb-16 mr-10 lg:w-72">
                         <img src="../images/perfil2.png" class="w-full" alt="">
                     </div>
                 </div>
             </div>
 
-            <!-- SECTION TEXTO-->
-            <div class="text text-left w-full px-5 font-body">
-                <h1 class="text-3xl font-semibold mb-2 dark:text-gray-300">Hello, Everyone! I'm</h1>
-                <h1 class="text-3xl mb-1 font-semibold dark:text-gray-300">Mia Landhi</h1>
-                <H2 class="text-lg text-primary mb-2 font-medium dark:text-primary">Professional photograph</H2>
-                <p class="text-sm text-secondary dark:text-primary">doing our best to bring the moments through photos</p>
+            <!-- HERO TEXTO + SCROLL DOWN -->
+            <div class="  w-full ">
+                <!-- HERO TEXT -->
+                <div class="pl-5  lg:pl-20">
+                    <h1 class="text-3xl font-semibold mb-2 dark:text-gray-300 lg:text-4xl ">Hello, Everyone! I'm</h1>
+                    <h1 class="text-3xl mb-1 font-semibold dark:text-gray-300 lg:text-4xl">Mia Landhi</h1>
+                    <H2 class="text-lg text-primary mb-2 font-medium dark:text-primary lg:text-xl">Professional photograph</H2>
+                    <p class="text-sm text-secondary dark:text-primary lg:text-lg mb-10">doing our best to bring the moments through photos</p>
+                </div>
+
+                <!-- SCROLL DOWN -->
+                <div class="flex items-center scale-100 lg:scale-100  w-full lg:pl-20 pl-5 mb-36">
+                    <img src="../images/icons/mouse.png" alt="" class="scale-75  lg:scale-100">
+                    <p class="text-xs md:text-sm dark:text-white">Scroll down</p>
+                </div>
             </div>
-            <div class="arrow-div pt-10 mb-36 hover:cursor-pointer flex justify-left  w-full px-4 outline-none">
-                <a href="#eu" class="outline-none">
-                    <img src="../images/icons/arrow.gif" alt="" class="rotate-90 w-10 outline-none">
+            <!-- LINKS WHEN DESKTOP-->
+            <div class="hidden lg:flex flex-col gap-5 lg:pl-5">
+                <img src="../images/icons/instagram.png" alt="" class="w-12">
+                <img src="../images/icons/linkedin.png" alt="">
+                <img src="../images/icons/whatsapp.png" alt="">
+            </div>
+            <!--
+            <div class="arrow-div pt-10 mb-36 hover:cursor-pointer flex justify-left  px-4 w-full">
+                <a href="#eu" class="">
+                    <img src="../images/icons/arrow.gif" alt="" class="rotate-90 w-10 ">
                 </a>
-            </div>
+            </div>-->
         </section>
 
         <!-- SEÇÃO 1 - SOBRE MEU TRABALHO -->
-        <section class="text-center scroll-mt-10" id="eu">
-            <h1 class="text-xl font-medium dark:text-gray-300">what can you expect from me</h1>
+        <section class="text-center scroll-mt-10  lg:mt-40 sm:flex sm:flex-col sm:justify-start sm:items-center " id="eu">
+            <h1 class="text-xl font-medium dark:text-gray-300 lg:text-4xl lg:font-semibold">what can you expect from me</h1>
             <!-- BLOCO 1 -->
-            <div class="bloco-1 w-full h-full">
-                <div class="bloco-1-img scale-75 hover:scale-90 transition-all 1s">
-                    <img src="../images/section/mobile/img01.jpg" alt="" class="rounded-md">
+            <div class="bloco-1 w-full h-full lg:flex lg:flex-row lg:py-40 lg:justify-around lg:items-center  md:flex md:flex-col md:items-center">
+                <div class="bloco-1-img scale-75  lg:w-36 lg:scale-150  ">
+                    <img src="../images/section/mobile/img01.jpg" alt="" class="rounded-md scale-110">
                 </div>
-                <div class="bloco-1-text text-center px-5 flex flex-col gap-10">
-                    <h2 class="text-2xl text-secondary font-medium dark:text-gray-300">1º Photos with modern and creative design</h2>
-                    <p class="text-sm dark:text-primary">In the age of visual innovation, modern photos transcend registers, becoming bold artistic expressions. Vibrant colors, innovative compositions and the use of technology redefine photography, transforming it into visual narratives that tell stories and evoke emotions. A universal language, contemporary photography is a unique visual experience.</p>
-                </div>
-            </div>
-
-            <!-- BLOCO 2-->
-            <div class="bloco-1 w-full">
-                <div class="bloco-1-img scale-75 hover:scale-90 transition-all 1s">
-                    <img src="../images/section/mobile/img2.jpg" alt="" class="rounded-md">
-                </div>
-                <div class="bloco-1-text text-center px-5 flex flex-col gap-10">
-                    <h2 class="text-2xl text-secondary font-medium dark:text-gray-300">2º the way you want</h2>
-                    <p class="text-sm dark:text-primary">In any business, delivering the product as the customer wants is not just an obligation, it is the secret to building trust. This not only keeps customers happy but also builds a good reputation. It's the recipe for a business that grows and stands out.</p>
+                <div class="bloco-1-text text-center px-5 flex flex-col gap-10 lg:w-96">
+                    <h2 class="text-2xl text-secondary font-medium dark:text-gray-300 lg:text-left">1º Photos with modern and creative design</h2>
+                    <p class="text-sm dark:text-primary lg:text-lg lg:text-left">In the age of visual innovation, modern photos transcend registers, becoming bold artistic expressions. Vibrant colors, innovative compositions and the use of technology redefine photography, transforming it into visual narratives that tell stories and evoke emotions. A universal language, contemporary photography is a unique visual experience.</p>
                 </div>
             </div>
             
-            <!-- BLOCO 3 -->
-            <div class="bloco-1 w-full">
-                <div class="bloco-1-img scale-75 hover:scale-90 transition-all 1s">
-                    <img src="../images/section/mobile/img3.jpg" alt="" class="rounded-md">
+            <!-- BLOCO 2 -->
+            <div class="bloco-1 w-full h-full lg:flex lg:py-40 lg:justify-around lg:items-center lg:flex-row-reverse md:flex md:flex-col md:items-center">
+                <div class="bloco-1-img scale-75  lg:w-36 lg:scale-150 ">
+                    <img src="../images/section/mobile/img2.jpg" alt="" class="rounded-md scale-110">
                 </div>
-                <div class="bloco-1-text text-center px-5 flex flex-col gap-10">
-                    <h2 class="text-2xl text-green-950 dark:text-gray-300">3º unparalleled quality</h2>
-                    <p class="text-sm dark:text-primary">In a world full of photos, quality is the trump card. Vibrant colors, sharp details - it's not just an image, it's a vibe! Amazing photos not only tell stories, they make them jump off the screen. Investing in this footprint is investing in moments that last, like, forever.</p>
+                <div class="bloco-1-text text-center px-5 flex flex-col gap-10 lg:w-96">
+                    <h2 class="text-2xl text-secondary font-medium dark:text-gray-300 lg:text-right">2º the way you want</h2>
+                    <p class="text-sm dark:text-primary lg:text-lg lg:text-right">In any business, delivering the product as the customer wants is not just an obligation, it is the secret to building trust. This not only keeps customers happy but also builds a good reputation. It's the recipe for a business that grows and stands out.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Bloco 3 -->
+            <div class="bloco-1 w-full h-full lg:flex lg:flex-row lg:py-40 lg:justify-around lg:items-center">
+                <div class="bloco-1-img scale-75 lg:w-36 lg:scale-150 md:flex md:flex-col md:items-center">
+                    <img src="../images/section/mobile/img3.jpg" alt="" class="rounded-md scale-110">
+                </div>
+                <div class="bloco-1-text text-center px-5 flex flex-col gap-10 lg:w-96">
+                    <h2 class="text-2xl text-secondary font-medium dark:text-gray-300 lg:text-left">3º unparalleled quality</h2>
+                    <p class="text-sm dark:text-primary lg:text-lg lg:text-left">In a world full of photos, quality is the trump card. Vibrant colors, sharp details - it's not just an image, it's a vibe! Amazing photos not only tell stories, they make them jump off the screen. Investing in this footprint is investing in moments that last, like, forever.</p>
                 </div>
             </div>
         </section>
+
+        <!-- PORTIFOLIO + SLIDER CONTAINER -->
         <section class="h-full text-center">
             <div>
-                <h2 class="pt-28 text-xl font-semibold dark:text-gray-300">Portifolio</h2>
+                <h2 class="pt-28 text-xl font-semibold dark:text-gray-300 lg:text-4xl lg:font-semibold">Portifolio</h2>
                 <h3 class="dark:text-primary mb-10">My recent works</h3>
             </div>
 
             <!-- SLIDER CONTAINER -->
-            <swiper-container class="mySwiper w-full h-full scale-90 cursor-grab" navigation="true">
-                <swiper-slide class="flex flex-col items-center gap-5">
+            <swiper-container class="mySwiper w-full h-full scale-90 cursor-grab lg:scale-105" navigation="true">
+                <swiper-slide class="flex flex-col items-center gap-5 lg:flex-row  lg:p-20 lg:scale-110">
                     <!-- div image -->
-                    <div class="w-72 h-40 relative bg-blue-400 overflow-hidden rounded-lg shadow-lg">
-                        <img src="../images/section/onepiece.jpeg" alt="" class="bg-contain w-full">
+                    <div class="w-72 h-40 relative  overflow-hidden rounded-lg shadow-lg lg:w-96 lg:ml-10 lg:scale-110">
+                        <img src="../images/section/onepiece.jpeg" alt="" class="bg-cover w-full h-full">
                     </div>
                     <!-- div text -->
-                    <div class="mb-36 text-left px-10">
+                    <div class="mb-36 text-left px-10  lg:mb-0 lg:py-20 lg:">
                         <h2 class="text-xl dark:text-gray-300 font-semibold mb-2">TV Show One Piece</h2>
                         <p class="dark:text-primary">
                             I participated in the creative photography process for the Netflix series One Piece
@@ -123,14 +154,22 @@
                         </button>
                     </div>
                 </swiper-slide>
-                <swiper-slide class="flex flex-col items-center gap-5">
-                    <div class="w-72 h-40 relative bg-blue-400 overflow-hidden rounded-lg shadow-lg">
-                        <img src="../images/section/theboys.jpg" alt="" class="bg-contain w-full">
+
+                <!-- SLIDER 2 -->
+                <swiper-slide class="flex flex-col items-center gap-5 lg:flex-row  lg:p-20 lg:scale-110">
+                    <!-- div image -->
+                    <div class="w-72 h-40 relative  overflow-hidden rounded-lg shadow-lg lg:w-96 lg:ml-10 lg:scale-110">
+                        <img src="../images/section/theboys.jpg" alt="" class="bg-contain w-full h-full">
                     </div>
-                    <div class="mb-36 text-left px-10">
+                    <!-- div text -->
+                    <div class="mb-36 text-left px-10  lg:mb-0 lg:py-20 lg:">
                         <h2 class="text-xl dark:text-gray-300 font-semibold mb-2">The Boys - TV Series</h2>
-                        <p class="dark:text-primary">I worked on the photography team for the series The Boys</p>
-                        <button class="bg-primary px-5 py-4 rounded-lg mt-4 text-white flex gap-2 hover:bg-secondary transition-colors cursor-pointer outline-none">
+                        <p class="dark:text-primary">
+                            I worked on the photography team for the series The Boys
+                        </p>
+
+                        <!-- button -->
+                        <button class=" bg-primary px-5 py-4 rounded-lg mt-4 text-white flex gap-2 hover:bg-secondary transition-colors cursor-pointer outline-none">
                             <p class="outline-none">Read More</p>
                             <img src="../images/icons/seta-direita(1).png" alt="" class="scale-75 hover:translate-x-1 transition-all outline-none">
                         </button>
@@ -138,18 +177,19 @@
                 </swiper-slide>
             </swiper-container>
         </section>
-
-        <!-- FOOTER -->
-        <footer class="bg-primary text-white w-full h-full px-10 pt-10 pb-28">
-            <h1 class="text-2xl font-semibold mb-2">Mia Landhi</h1>
-            <p class="text-sm mb-4">the right person for you.</p>
-            <div class="flex gap-4 ">
-                <img src="../images//icons/instagram.png" alt="" class="scale-75">
-                <img src="../images//icons/linkedin.png" alt="" class="scale-75">
-                <img src="../images//icons/whatsapp.png" alt="" class="scale-75">
-            </div>
-        </footer>
     </div>
+    <!-- FOOTER -->
+    <footer class="bg-primary pb-32 pt-10 w-screen pl-10 flex flex-col gap-10 lg:justify- lg:flex-row lg:items-center lg:py-32 lg:justify-center">
+        <div>
+            <h1 class="text-2xl font-semibold text-white lg:text-4xl lg:font-semibold ">Mia Landhi</h1>
+            <h3 class="text-white mt-2">the right person for you</h3>
+        </div>
+        <div class="flex gap-4  lg:w-48">
+            <img src="../images//icons/instagram.png" alt="" class="scale-75 ">
+            <img src="../images//icons/linkedin.png" alt="" class="scale-75 ">
+            <img src="../images//icons/whatsapp.png" alt="" class="scale-75">
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
     <script src="./script.js" type="module"></script>
 </body>
